[issue 35] Simplify example